--- a/style.css
+++ b/style.css
@@ -38,7 +38,155 @@ svg {
     width: 100%;
 }
 
+/* || STYLES */
+body {
+    font-family: var(--ff-main);
+    line-height: 1.6;
+    color: var(--clr-paragraph);
+}
+
+footer {
+    background-color: rgb(245, 246, 248);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 3rem 2.1rem 2rem;
+    gap: 1.3rem;
+}
+
+.header-img-box {
+    position: relative;
+    display: grid;
+    place-content: center;
+    margin-bottom: 3.5rem;
+}
+
+.bg-header {
+    position: absolute;
+}
+
+.logo.header {
+    margin-top: 8rem;
+}
+
+.features-card {
+    padding: 0 2.1rem 0;
+    text-align: center;
+}
+
+.features-card__title {
+    color: var(--clr-title);
+    margin-bottom: 0.9rem;
+}
+
+.buttons-container {
+    margin: 3.4rem 0 10rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.4rem;
+}
+
+.features-card__btn {
+    padding: 1rem 0;
+    border: none;
+    border-radius: 999rem;
+    background-color: var(--clr-green);
+    color: whitesmoke;
+    font: var(--ff-main);
+    font-weight: var(--fw-bold);
+    font-size: 1rem;
+    letter-spacing: 0.09rem;
+    box-shadow: inset 0 -0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.2);
+}
+
+.img-computer {
+    margin: 4.8rem 0 4rem;
+    max-width: 100%;
+    height: auto;
+    width: auto;
+}
+
+.features-card__flex-box {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+    margin-bottom: 12rem;
+}
+
+.features-card__flex-box-tools{
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+    margin: 6rem 0;
+}
+
+.features-card__flex-box-tools .h3 {
+    margin-bottom: 1rem;
+}
+
+.img-devices {
+    margin: 4rem 0 5.7rem;
+    margin-left: -0.5rem;
+    width: calc(100% + 2.1rem);
+    height: auto;
+}
+
+.img-features {
+    width: auto;
+    height: 2.5rem;
+    margin: 0 auto 2rem;
+}
+
+.partners {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+    margin: 9rem 0 9rem;
+}
+
+.partners__img {
+    width: auto;
+    height: 2.4rem;
+    margin: 0 auto;
+}
+
+.footer__logo {
+    margin: 0 auto 1rem;
+    max-width: 3.5rem;
+    height: auto;
+    width: auto;
+}
+
+.footer__link {
+    text-decoration: none;
+    color: var(--clr-title);
+    font-size: 1.2rem;
+}
+
+.footer__social-media-flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2.5rem;
+    margin-top: 2rem;
+}
+
 /* || UTILITY CLASSES */
+.green-btn {
+    box-shadow: inset 0 -0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.2), 0 0.5rem 2.5rem 0.5rem hsla(171, 66%, 44%, 0.2);
+}
+
+.blue-btn {
+    background-color: var(--clr-blue);
+    box-shadow: inset 0 -0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.2), 0 0.5rem 2.5rem 0.5rem hsla(233, 100%, 69%, 0.2);
+}
+
+.near-footer {
+    margin: 2.8rem 0 10rem;
+}
+
 /* hide something from screen reader */
 /* https://www.scottohara.me/blog/2017/04/14/inclusively-hidden.html */
 .visually-hidden:not(:focus):not(:active) {
@@ -51,4 +199,21 @@ svg {
     width: 1px;
 }
 
-/* || STYLES */
+.h1 {
+    font-weight: var(--fw-bold);
+    font-size: 1.875rem;
+}
+
+.h2 {
+    font-weight: var(--fw-bold);
+    font-size: 1.7rem;
+    line-height: 1.3;
+}
+
+.h3 {
+    font-weight: var(--fw-bold);
+    font-size: 1.5rem;
+    line-height: 1.3;
+    margin-bottom: 0.4rem;
+}
+
