--- a/style.css
+++ b/style.css
@@ -101,11 +101,16 @@ footer {
     cursor: pointer;
 }
 
+.features-card__btn:hover {
+    opacity: 0.7;
+}
+
 .img-computer {
     margin: 4.8rem auto 4rem;
     max-width: 100%;
     height: auto;
     width: auto;
+    padding: 0 2rem;
 }
 
 .features-card__flex-box {
@@ -163,6 +168,15 @@ footer {
     text-decoration: none;
     color: var(--clr-title);
     font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.footer__link:hover {
+    color: var(--clr-green);
+}
+
+.footer__link-icon:hover {
+    filter: invert(51%) sepia(84%) saturate(387%) hue-rotate(122deg) brightness(102%) contrast(86%);
 }
 
 .footer__social-media-flex {
@@ -224,9 +238,18 @@ footer {
         justify-content: center;
     }
 
+    .features-card {
+        font-size: 1.3rem;
+    }
+
     .features-card__btn {
         padding-left: 2rem;
         padding-right: 2rem;
+    }
+
+    .buttons-container {
+        margin-top: 3rem;
+        margin-bottom: 9rem;
     }
 
     .computer-img-grid {
@@ -234,15 +257,12 @@ footer {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: auto 1fr;
         align-items: center;
+        margin-bottom: 6rem;
     }
 
     .first-row {
         grid-row: 1;
         grid-column: 2 span;
-    }
-
-    .features-card__flex-box {
-        margin-bottom: 0;
     }
 
     .img-computer {
@@ -251,10 +271,12 @@ footer {
 
     .features-card__flex-box-tools {
         flex-direction: row;
+        padding: 0 10rem;
     }
 
     .partners {
         flex-direction: row;
+        padding: 0 10rem
     }
 
     footer {
@@ -262,10 +284,54 @@ footer {
         max-height: 11rem;
         align-items: flex-start;
         justify-content: flex-start;
+        padding-left: 5rem;
     }
 
     .footer__social-media-flex {
-        margin:0;
+        margin: 0;
         margin-bottom: 3rem;
+        margin-left: 10rem;
+        margin-top: 2rem;
+    }
+
+    .footer__logo {
+        margin-right: 5rem;
+    }
+
+    .p-padding-large {
+        padding: 0 19rem;
+    }
+
+    .features-card__flex-box {
+        padding: 0 14rem 0 5rem;
+        margin: 0;
+        gap: 4rem;
+    }
+
+    .img-devices {
+        height: 35rem;
+        width: auto;
+        margin: 6rem auto 5rem;
+    }
+
+    .position-start {
+        text-align: start;
+    }
+
+    .h1 {
+        font-size: 3rem;
+        margin-bottom: 0;
+    }
+
+    .h2 {
+        font-size: 2.2rem;
+    }
+
+    .p-small {
+        font-size: 1.2rem;
+    }
+
+    .p-very-small {
+        font-size: 1rem;
     }
 }
